--- a/index.html
+++ b/index.html
@@ -3,16 +3,33 @@
 <head>
   <script src="/jquery-2.1.4.min.js"></script>
   <script src="/script.js"></script>
+  <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
   <link href='style.css' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
 	<div id='container'>
-		<form method='POST' action="/play">
-			<input id='entername' type='text' name='name' >
-			<h5 id='error'></h5>
-			<input type='submit' value='Join the chat!' id='send'>
-		</form>
+		<div></div>
+		<div id="mid">
+			<div id='clock'><div>00</div><div>00</div><div>00</div><div>42</div></div>
+			<p>Time until next test</p>
+			<h1><p>The Testing Grounds</p></h1>
+			<p>Welcome to the Testing Grounds, where role ideas are tested in simulated gameplay. 
+			If you have not done so yet, please sign up on the <a href='http://www.blankmediagames.com/phpbb/viewtopic.php?f=50&t=20066'>Potential Participants</a>
+			 thread as well as the thread for the current game.</p>
+			 
+			 <p>If you have any questions about the Testing Grounds, please see the <a href='http://www.blankmediagames.com/phpbb/viewtopic.php?f=50&t=20013'>FAQ</a> or message <a href='http://www.blankmediagames.com/phpbb/memberlist.php?mode=viewprofile&u=306141'>Kiyosen</a>. If you have found a bug with the Testing Grounds server post it <a href='http://www.blankmediagames.com/phpbb/viewtopic.php?f=50&t=32072'>here</a> or message <a href='http://www.blankmediagames.com/phpbb/memberlist.php?mode=viewprofile&u=422145'>KittenLicks</a>.</p>
+			<div id='inputcontainer'>
+				<form method='POST' action="/play">
+					<input id='entername' type='text' name='name' >
+					<input type='submit' value='Join the chat!' id='send'>
+					<h5 id='error'></h5>
+				</form>
+			</div>
+		</div>
+		<div id="last">
+		</div>
 	</div>
+	<footer><p>Support the Testing Grounds by putting this image in your signature!</p><img src='http://i61.tinypic.com/208aemu.png' /></footer>
 </body>
 </html>
