Added timer. Fixed name length bug.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			 <p>If you have any questions about the Testing Grounds, please see the <a href='http://www.blankmediagames.com/phpbb/viewtopic.php?f=50&t=20013'>FAQ</a> or message <a href='http://www.blankmediagames.com/phpbb/memberlist.php?mode=viewprofile&u=306141'>Kiyosen</a>. If you have found a bug with the Testing Grounds server post it <a href='http://www.blankmediagames.com/phpbb/viewtopic.php?f=50&t=32072'>here</a> or message <a href='http://www.blankmediagames.com/phpbb/memberlist.php?mode=viewprofile&u=422145'>KittenLicks</a>.</p>
 			<div id='inputcontainer'>
 				<form method='POST' action="/play">
-					<input id='entername' type='text' name='name' >
+					<input id='entername' placeholder='Name' type='text' name='name' >
 					<input type='submit' value='Join the chat!' id='send'>
 					<h5 id='error'></h5>
 				</form>
@@ -30,6 +30,8 @@
 		<div id="last">
 		</div>
 	</div>
-	<footer><p>Support the Testing Grounds by putting this image in your signature!</p><img src='http://i61.tinypic.com/208aemu.png' /></footer>
+	<footer><p>Support the Testing Grounds by putting this image in your signature!</p><img src='http://i61.tinypic.com/208aemu.png' />
+	<div class="tgsig"><p>BBCode:</p><input type='text' value="[url=http://www.blankmediagames.com/phpbb/viewforum.php?f=50][img]http://i61.tinypic.com/208aemu.png[/img][/url]" /></div>	
+	</footer>
 </body>
 </html>
