Zoro added Attribute None to Lookout, Tracker, Investigator

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			If you have not done so yet, please sign up on the <a href='http://www.blankmediagames.com/phpbb/viewtopic.php?f=50&t=20066'>Potential Participants</a>
 			 thread as well as the thread for the current game.</p>
 			 
-			 <p>If you have any questions about the Testing Grounds, please see the <a href='http://www.blankmediagames.com/phpbb/viewtopic.php?f=50&t=20013'>FAQ</a> or message <a href='http://www.blankmediagames.com/phpbb/memberlist.php?mode=viewprofile&u=306141'>Kiyosen</a>. If you have found a bug with the Testing Grounds server post it <a href='http://www.blankmediagames.com/phpbb/viewtopic.php?f=50&t=32072'>here</a> or message <a href='http://www.blankmediagames.com/phpbb/memberlist.php?mode=viewprofile&u=422145'>KittenLicks</a>.</p>
+			 <p>If you have any questions about the Testing Grounds, please see the <a href='http://www.blankmediagames.com/phpbb/viewtopic.php?f=50&t=20013'>FAQ</a> or message <a href='http://www.blankmediagames.com/phpbb/memberlist.php?mode=viewprofile&u=306141'>Kiyosen</a>. If you have found a bug with the Testing Grounds server post it <a href='http://www.blankmediagames.com/phpbb/viewtopic.php?f=50&t=32072'>here</a> or message <a href='http://www.blankmediagames.com/phpbb/memberlist.php?mode=viewprofile&u=1347826'>Jerme/Zoroark</a>.</p>
 			<div id='inputcontainer'>
 				<form method='POST' action="/play">
 					<input id='entername' placeholder='Name' type='text' name='name' >
