--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <script src="/script.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
   <link href='style.css' rel='stylesheet' type='text/css'>
+  <title>Choose your name!</title>
 </head>
 
 <body>
