Zoro added stuff for curiosity 2

--- a/play.html
+++ b/play.html
@@ -12,7 +12,7 @@
 
 <body>
 	<header><ul><li>Pregame</li><li>Roles</li><li>Mod time</li><li>Day</li><li>Voting</li><li>Trial</li><li>Verdict</li>
-	<li>Last words</li><li>Night</li></li></ul><div class='willbutton' onclick="openWill()">WILL</div><div id='clock'></div></header>
+	<li>Last words</li><li>Night</li><li>Day 1</li></li></ul><div class='willbutton' onclick="openWill()">WILL</div><div id='clock'></div></header>
 	<ul id='main'>
 	
 	</ul>
