/help command, various fixes, can now toggle automod on and off

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 			<h1><p>The Testing Grounds</p></h1>
 			<p>Welcome to the Testing Grounds, where role ideas are tested in simulated gameplay. 
 			If you have not done so yet, please sign up on the <a href='http://www.blankmediagames.com/phpbb/viewtopic.php?f=50&t=20066'>Potential Participants</a>
-			 thread as well as the thread for the current game.</p>
+			 thread.</p>
 			 
 			 <p>If you have any questions about the Testing Grounds, please see the <a href='http://www.blankmediagames.com/phpbb/viewtopic.php?f=50&t=20013'>FAQ</a> or message <a href='http://www.blankmediagames.com/phpbb/memberlist.php?mode=viewprofile&u=306141'>Kiyosen</a>. If you have found a bug with the Testing Grounds server post it <a href='http://www.blankmediagames.com/phpbb/viewtopic.php?f=50&t=32072'>here</a> or message <a href='http://www.blankmediagames.com/phpbb/memberlist.php?mode=viewprofile&u=1347826'>Jerme/Zoroark</a>.</p>
+			 <p><a href='https://docs.google.com/document/d/1BsF_y-TeaF_EQ7xENW8zSfkG6-JjLI4-BfgoSdUgiuM/edit?usp=sharing'>Click here to see how TG works</a></p>
 			<div id='inputcontainer'>
 				<form method='POST' action="/play">
 					<input id='entername' placeholder='Name' type='text' name='name' >
@@ -31,8 +32,10 @@
 		<div id="last">
 		</div>
 	</div>
-	<footer><p>Support the Testing Grounds by putting this image in your signature!</p><img src='http://i61.tinypic.com/208aemu.png' />
-	<div class="tgsig"><p>BBCode:</p><input type='text' value="[url=http://www.blankmediagames.com/phpbb/viewforum.php?f=50][img]http://i61.tinypic.com/208aemu.png[/img][/url]" /></div>	
+	<footer>
+		<p></p>
+		<p>Support the Testing Grounds by putting this image in your signature!</p><img src='http://i61.tinypic.com/208aemu.png' />
+		<div class="tgsig"><p>BBCode:</p><input type='text' value="[url=http://www.blankmediagames.com/phpbb/viewforum.php?f=50][img]http://i61.tinypic.com/208aemu.png[/img][/url]" /></div>	
 	</footer>
 </body>
 </html>
