Added day numbering system

--- a/play.html
+++ b/play.html
@@ -17,14 +17,17 @@
 			<li><span>Pregame</span></li>
 			<li><span>Roles</span></li>
 			<li><span>Mod time</span></li>
-			<li><span>Day</span></li>
+			<li><span id="dayli">Day</span></li>
 			<li><span>Voting</span></li>
 			<li><span>Trial</span></li>
 			<li><span>Verdict</span></li>
 			<li><span>Last words</span></li>
-			<li><span>Night</span></li>
+			<li><span id="nightli">Night</span></li>
 			<li><span>Day 1</span></li>
 		</ul>
+		<div id="modnumbering">
+			
+		</div>
 		<div class='willbutton' onclick="openWill()">WILL</div>
 	</header>
 	<ul id='main'>
