--- a/play.html
+++ b/play.html
@@ -28,7 +28,8 @@
 		<div id="modnumbering">
 			
 		</div>
-		<div class='willbutton' onclick="openWill()">WILL</div>
+		<img src="images/lastwillbutton.png" class='willbutton' onclick="openWill()">
+		<img src="images/deathnotebutton.png" class='deathnotebutton' onclick="openDeathNote()">
 	</header>
 	<ul id='main'>
 	
