--- a/play.html
+++ b/play.html
@@ -28,8 +28,7 @@
 		<div id="modnumbering">
 			
 		</div>
-		<img src="../images/lastwillbutton.png" class='willbutton' onclick="openWill()">
-		<img src="../images/deathnotebutton.png" class='deathnotebutton' onclick="openDeathNote()">
+		<div class='willbutton' onclick="openWill()">WILL</div>
 	</header>
 	<ul id='main'>
 	
