--- a/play.html
+++ b/play.html
@@ -31,7 +31,7 @@
 		<div class='willbutton' onclick="openWill()">WILL</div>
 	</header>
 	<ul id='main'>
-	
+	<img src="images/Back1.jpg" height="100%" width="100%">
 	</ul>
 	<div id="adjustabledivider" onmousedown="grabDivider()"></div>
 	<ul id='userlist'></ul>
