--- a/play.html
+++ b/play.html
@@ -29,6 +29,7 @@
 			
 		</div>
 		<div class='willbutton' onclick="openWill()">WILL</div>
+		<div class='musicbutton' onclick="mutemusic()">♫</div>
 	</header>
 	<ul id='main'>
 	</ul>
