--- a/play.html
+++ b/play.html
@@ -28,7 +28,7 @@
 		<div id="modnumbering">
 			
 		</div>
-		<div class='willbutton' onclick="openWill()">WILL</div>
+		<img src="images/lastwillbutton.png" class='willbutton' onclick="openWill()">
 		<div class='musicbutton' onclick="mutemusic()">♫</div>
 	</header>
 	<ul id='main'>
