--- a/play.html
+++ b/play.html
@@ -29,7 +29,7 @@
 			
 		</div>
 		<img src="lastwillbutton.png" class='willbutton' onclick="openWill()">
-		<div class='musicbutton' onclick="mutemusic()">♫</div>
+		<img src="music.png" class='musicbutton' onclick="mutemusic()">
 	</header>
 	<ul id='main'>
 	</ul>
