--- a/play.html
+++ b/play.html
@@ -6,7 +6,7 @@
   <script src="/jquery-2.1.4.min.js"></script>
   <script src="/playscript.js"></script>
   <script src="/socketstuff.js"></script> 
-  <script src="snowstorm.js"></script> 
+  <script src="/snowstorm.js"></script> 
   <link href='playstyle.css' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/css?family=Denk+One|Open+Sans|Slabo+27px" rel="stylesheet">
 </head>
