--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 			 thread.</p>
 			 
 			 <p>If you have any questions about the Testing Grounds, please see the <a href='http://www.blankmediagames.com/phpbb/viewtopic.php?f=50&t=20013'>FAQ</a> or message a <a href='http://blankmediagames.com/phpbb/viewtopic.php?f=50&t=20013#p553655'>TG Staff Member</a>. If you have found a bug with the Testing Grounds server post it <a href='http://www.blankmediagames.com/phpbb/viewtopic.php?f=50&t=32072'>here</a> or message <a href='http://www.blankmediagames.com/phpbb/memberlist.php?mode=viewprofile&u=1270513'>Ralozey</a>.</p>
-			 <p><a href='https://docs.google.com/document/d/1BsF_y-TeaF_EQ7xENW8zSfkG6-JjLI4-BfgoSdUgiuM/edit?usp=sharing'>Click here to see how TG works</a></p>
+			 <p>Join our <a href='https://discord.gg/EVS55Zb'>Discord Server</a></p>
+            <p><a href='https://docs.google.com/document/d/1BsF_y-TeaF_EQ7xENW8zSfkG6-JjLI4-BfgoSdUgiuM/edit?usp=sharing'>Click here to see how TG works</a></p>
 			<div id='inputcontainer'>
 				<form method='POST' action="/play">
 					<input id='entername' placeholder='Name' type='text' name='name' >
