--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 			 <p>Join our <a href='https://discord.gg/EVS55Zb'>Discord Server</a></p>
             <p><a href='https://docs.google.com/document/d/1BsF_y-TeaF_EQ7xENW8zSfkG6-JjLI4-BfgoSdUgiuM/edit?usp=sharing'>Click here to see how TG works</a></p>
 			<div id='inputcontainer'>
-				<form name="login" method='GET' action="">
+				<form name="login" method='POST' action="">
 					<input id='username' placeholder='Username' type='text' name='username'>
-                    <input id='password' placeholder='Passworde' type='text' name='password'>
+                    <input id='password' placeholder='Password' type='text' name='password'>
 					<input type='button' value='Login!' id='send' onClick='login(this.form)'>
 					<h5 id='error'></h5>
 				</form>
