Switching Login Script to Node

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<form name="login" method='POST' action="">
 					<input id='username' placeholder='Username' type='text' name='username'>
                     <input id='password' placeholder='Password' type='text' name='password'>
-					<input type='button' value='Login!' id='send' onClick='login(this.form)'>
+					<input type='button' value='Login!' id='send' onClick='loginindex(this.form)'>
 					<h5 id='error'></h5>
 				</form>
 			</div>
