--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <script src="/jquery-2.1.4.min.js"></script>
-  <script src="/script.js"></script>
+  <script src="script.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
   <link href='style.css' rel='stylesheet' type='text/css'>
   <title>Choose your name!</title>
