--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
 		<p>Support the Testing Grounds by putting this image in your signature!</p><img src='http://i61.tinypic.com/208aemu.png' />
 		<div class="tgsig"><p>BBCode:</p><input type='text' value="[url=http://www.blankmediagames.com/phpbb/viewforum.php?f=50][img]http://i61.tinypic.com/208aemu.png[/img][/url]" /></div>	
 	</footer>
+    <div id="hidden_form_container" style="display:none;"></div>
 </body>
 </html>
