Making Password input hidden

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div id='inputcontainer'>
 				<form name="login" method='POST' action="#" id="loginform">
 					<input id='username' placeholder='Username' type='text' name='username'>
-                    <input id='password' placeholder='Password' type='text' name='password'>
+                    <input id='password' placeholder='Password' type='password' name='password'>
 					<input type='button' name="submit" value='Login!' id='send' onclick="loginindex();">
 					<h5 id='error'></h5>
 				</form>
